# gamma_income_model

./: main.py  pyproject.toml
Data/: .gitignore
Notebooks/Data_Comparison/: Bir_Data_Comparison.ipynb  COE_Data_Comparison.ipynb  Data_Comparison_Income_with_declared_salary.ipynb  ITR_Data_Comparison.ipynb  bs_Data_Comparison.ipynb  payslip_Data_Comparison.ipynb
Notebooks/Data_Preparation/: Bank_Statement_Clustering.ipynb  Gamma_Income_Model_V1.ipynb  Payslip_data_preparation.ipynb  Target_Annual_Income_Vs_Declared_Salary_selfdeclared_salary.ipynb  powerCred_Data_Preparation.ipynb
Notebooks/Model Notebook/: Gamma_Income_Model_V1.ipynb
