[project]
name = "gamma-income-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "duckdb>=1.3.2",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-storage>=3.2.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
