[project]
name = "gamma-income-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "db-dtypes>=1.4.3",
    "duckdb>=1.3.2",
    "fuzzywuzzy>=0.18.0",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-storage>=3.2.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-gbq>=0.29.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
